--- a/1.html
+++ b/1.html
@@ -47,7 +47,7 @@
         text-align: center;
         width: 150px;
         height: 60px;
-  
+
         /* background-color: aquamarine; */
         position: relative;
     }
@@ -124,7 +124,7 @@
             </div>
             <div class="biaodan">
                 <div class="biao">
-                    <input type="text"  class="in">
+                    <input type="text" class="in">
                     <input type="text" class="in">
                     <label class="checkLabel"><input type="checkbox" id="11" class="check" /> 记住</label>
                     <button class="sub">登录</button>
@@ -134,6 +134,83 @@
         </div>
     </div>
     </div>
+
+    <script>
+
+        // function countStr(str) {
+        //     const obj = {}
+        //     for (let i = 0; i < str.length; i++) {
+        //         const t = str.charAt(i)
+        //         if (obj[t]) {
+        //             obj[t]++
+        //         } else {
+        //             obj[t] = 1
+        //         }
+
+        //     }
+        //     let maxCount = 0, maxStr = ""
+        //     for (let i in obj) {
+        //         if (maxCount < obj[i]) {
+        //             maxCount = obj[i];
+        //             maxStr = i
+        //         }
+        //     }
+        //     console.log(maxCount, maxStr);
+        // }
+        // countStr("abaaabc")
+
+        // function countStr(str, target) {
+
+        //     // const arr = str.split(target.toLowerCase())
+        //     // console.log(arr.length - 1);
+        //     let count = 0;
+        //     // let index = str.indexOf(target.toLowerCase())
+        //     // while (index !== -1) {
+        //     //     index = str.indexOf(target.toLowerCase(), index + 1)
+        //     //     count++
+        //     // }
+        //     // for (let i = 0; i < str.length; i++) {
+        //     //     if (str[i] === target.toLowerCase()) {
+        //     //         count++
+        //     //     }
+        //     // }
+        //     console.log(count);
+
+        // }
+
+
+        // function countStr(str) {
+        //     const arr = str.split(" ");
+        //     console.log(arr[arr.length - 1].length);
+        // }
+        // countStr("hello world")
+
+        // (function () {
+        //     let arr = []
+        //     for (let i = 0; i < 1000; i++) {
+        //         arr.push(Math.floor(Math.random() * 1000))
+        //     }
+        //     arr = [...new Set(arr)]
+        //     arr.sort()
+        //     console.log(arr);
+        // })()
+
+        // (function (str) {
+        //     const l = str.replace(/\s/g, "")
+
+        // })(" a bc d")
+
+        (function (str, target) {
+            for (let i = 0; i < str.length; i++) {
+                if (str.match(/target/)) {
+
+                }
+            }
+
+        })("abcdeda", "a")
+    </script>
+
+
 </body>
 
 </html>
