--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
     padding: 0;
     font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', Arial, sans-serif !important;
   }
-
-  /* #root {
+/* 
+  #root {
     width: 100px;
     height: 500px;
     background-color: red;
